# Fishodo

./: .gitignore  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: project.rs  task.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: mod.rs
src-tauri/src/plugin/: mod.rs
src/components/command-palette/: CommandPalette.tsx
src/components/icons/: index.tsx
src/components/layout/: Sidebar.tsx
src/components/notifications/: NotificationProvider.tsx  context.ts  useNotification.ts
src/components/search/: SearchBar.tsx
src/features/tasks/components/: TaskItem.tsx  TaskList.tsx
src/hooks/: index.ts  useProjects.ts  useTasks.ts
src/lib/: index.ts  plugin-registry.ts  storage.ts
src/stores/: ui-store.ts
src/types/: index.ts
