[package]
name = "fishodo"
version = "0.1.0"
description = "Fishodo - 摸鱼利器, a lightweight cross-platform TODO List"
authors = ["Fishodo Team"]
license = "GPL-3.0"
repository = "https://github.com/aDarkMaker/Fishodo"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fishodo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
